Fixed previous issue with alignment by adding max-width to main element

--- a/styles/style.css
+++ b/styles/style.css
@@ -172,6 +172,7 @@ main {
 
   main {
     background-color: var(--blue-950);
+    max-width: 592px;
     width: 100%;
   }
 
